# opencv-mobile-4.10.0-luckfox-pico

./: CMakeLists.txt  clean.sh  main.cpp
